# wmf-rs

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  package.json  rust-toolchain.toml  rustfmt.toml
cli/: Cargo.toml
cli/src/: main.rs
converter/: Cargo.toml
converter/src/: bitmap.rs  converter.rs  generator.rs  graphics_object.rs  lib.rs  player.rs
converter/src/svg/: device_context.rs  graphics_object.rs  mod.rs  util.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/constants/: mod.rs
core/src/constants/enums/: binary_raster_operation.rs  bit_count.rs  brush_style.rs  character_set.rs  color_usage.rs  compression.rs  flood_fill.rs  font_quality.rs  gamut_mapping_intent.rs  hatch_style.rs  layout.rs  logical_color_space.rs  logical_color_space_v5.rs  map_mode.rs  metafile_escapes.rs  metafile_type.rs  metafile_version.rs  mix_mode.rs  mod.rs  out_precision.rs  palette_entry_flag.rs  pen_style.rs  pitch_font.rs  poly_fill_mode.rs  post_script_cap.rs  post_script_clipping.rs  post_script_feature_setting.rs  post_script_join.rs  record_type.rs  stretch_mode.rs  ternary_raster_operation.rs
core/src/constants/flags/: clip_precision.rs  ext_text_out_options.rs  mod.rs  text_alignment_mode.rs  vertical_text_alignment_mode.rs
core/src/converter/: bitmap.rs  converter.rs  graphics_object.rs  mod.rs  player.rs
core/src/converter/svg/: device_context.rs  mod.rs  node.rs  ternary_raster_operator.rs  util.rs
core/src/objects/: mod.rs
core/src/objects/graphics/: brush.rs  font.rs  palette.rs  pen.rs  region.rs
core/src/objects/structure/: bitmap16.rs  bitmap_core_header.rs  bitmap_info_header.rs  bitmap_v4_header.rs  bitmap_v5_header.rs  ciexyz.rs  ciexyz_triple.rs  color_ref.rs  device_independent_bitmap.rs  log_brush.rs  log_color_space.rs  log_color_space_w.rs  mod.rs  palette_entry.rs  pitch_and_family.rs  point_l.rs  point_s.rs  poly_polygon.rs  rect.rs  rect_l.rs  rgb_quad.rs  scan.rs  size_l.rs
core/src/objects/structure/bitmap_info_header/: core.rs  info.rs  mod.rs  v4.rs  v5.rs
core/src/parser/: mod.rs
core/src/parser/constants/: mod.rs
core/src/parser/constants/enums/: binary_raster_operation.rs  bit_count.rs  brush_style.rs  character_set.rs  color_usage.rs  compression.rs  family_font.rs  flood_fill.rs  font_quality.rs  gamut_mapping_intent.rs  hatch_style.rs  layout.rs  logical_color_space.rs  map_mode.rs  metafile_escapes.rs  metafile_type.rs  metafile_version.rs  mix_mode.rs  mod.rs  out_precision.rs  palette_entry_flag.rs  pen_style.rs  pitch_font.rs  poly_fill_mode.rs  post_script_cap.rs  post_script_clipping.rs  post_script_feature_setting.rs  post_script_join.rs  record_type.rs  stretch_mode.rs  ternary_raster_operation.rs
core/src/parser/constants/flags/: clip_precision.rs  ext_text_out_options.rs  text_alignment_mode.rs  vertical_text_alignment_mode.rs
core/src/parser/objects/graphics/: brush.rs  font.rs  mod.rs  palette.rs  pen.rs  region.rs
core/src/parser/objects/structure/: bitmap16.rs  ciexyz.rs  ciexyz_triple.rs  color_ref.rs  device_independent_bitmap.rs  log_brush.rs  log_color_space.rs  log_color_space_w.rs  mod.rs  palette_entry.rs  pitch_and_family.rs  point_l.rs  point_s.rs  poly_polygon.rs  rect.rs  rect_l.rs  rgb_quad.rs  rgb_triple.rs  scan.rs  size_l.rs
core/src/parser/records/: mod.rs
core/src/parser/records/bitmap/: bit_blt.rs  dib_bit_blt.rs  dib_stretch_blt.rs  mod.rs  set_dib_to_dev.rs  stretch_blt.rs  stretch_dib.rs
core/src/parser/records/control/: eof.rs  header.rs  mod.rs  placeable.rs  replaceable.rs
core/src/parser/records/drawing/: arc.rs  chord.rs  ellipse.rs  ext_flood_fill.rs  ext_text_out.rs  fill_region.rs  flood_fill.rs  (+15 more)
core/src/records/: mod.rs
core/src/records/bitmap/: bit_blt.rs  dib_bit_blt.rs  dib_stretch_blt.rs  set_dib_to_dev.rs  stretch_blt.rs  stretch_dib.rs
core/src/records/control/: eof.rs  header.rs  mod.rs  replaceable.rs
core/src/records/drawing/: arc.rs  chord.rs  ellipse.rs  ext_flood_fill.rs  ext_text_out.rs  fill_region.rs  flood_fill.rs  frame_region.rs  invert_region.rs  line_to.rs  mod.rs  paint_region.rs  pat_blt.rs  pie.rs  poly_line.rs  poly_polygon.rs  polygon.rs  reactangle.rs  round_rect.rs  set_pixel.rs  text_out.rs
core/src/records/escape/: abort_doc.rs  begin_path.rs  check_jpeg_format.rs  check_png_format.rs  clip_to_path.rs  close_channel.rs  download_face.rs  download_header.rs  draw_pattern_rect.rs  encapsulated_postscript.rs  end_doc.rs  end_path.rs  eps_printing.rs  ext_text_out.rs  get_color_table.rs  get_device_units.rs  get_extended_text_metrics.rs  get_facename.rs  get_pair_kern_table.rs  get_phys_page_size.rs  get_printing_offset.rs  get_ps_feature_setting.rs  get_scaling_factor.rs  meta_escape_enhanced_metafile.rs  metafile_driver.rs  mod.rs  new_frame.rs  next_band.rs  open_channel.rs  passthrough.rs  postscript_data.rs  postscript_identify.rs  postscript_ignore.rs  postscript_injection.rs  postscript_passthrough.rs  query_dib_support.rs  query_esc_support.rs  set_color_table.rs  set_copy_count.rs  set_line_cap.rs  (+4 more)
core/src/records/object/: create_brush_indirect.rs  create_font_indirect.rs  create_palette.rs  create_pattern_brush.rs  create_pen_indirect.rs  create_region.rs  delete_object.rs  dib_create_pattern_brush.rs  mod.rs  select_clip_region.rs  select_object.rs  select_palette.rs
core/src/records/state/: animate_palette.rs  exclude_clip_rect.rs  intersect_clip_rect.rs  mod.rs  move_to.rs  offset_clip_rgn.rs  offset_viewport_org.rs  offset_window_org.rs  realize_palette.rs  resize_palette.rs  restore_dc.rs  save_dc.rs  scale_viewport_ext.rs  scale_window_ext.rs  set_bk_color.rs  set_bk_mode.rs  set_layout.rs  set_map_mode.rs  set_mapper_flags.rs  set_pal_entries.rs  set_polyfill_mode.rs  set_relabs.rs  set_rop2.rs  set_stretch_blt_mode.rs  set_text_align.rs  set_text_char_extra.rs  set_text_color.rs  set_text_justification.rs  set_viewport_ext.rs  set_viewport_org.rs  set_window_ext.rs  set_window_org.rs
core/tests/drawing/: chord.rs  mod.rs  poly_polygon.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+98 files in other folders)
