[package]
name = "wmf-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wmf-core = { workspace = true }

[lints]
workspace = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"
