[package]
name = "wmf-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["svg"]
svg = ["dep:base64"]

[dependencies]
base64 = { workspace = true, optional = true }
embedded-io = { workspace = true }
encoding_rs = { workspace = true }
paste = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }

[lints]
workspace = true
