[package]
name = "wmf-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["svg", "tracing"]
svg = ["dep:base64"]
tracing = ["dep:tracing"]

[dependencies]
base64 = { workspace = true, optional = true }
embedded-io = { workspace = true }
encoding_rs = { workspace = true }
paste = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true, optional = true }
unicode-segmentation = { workspace = true }

[lints]
workspace = true
