[package]
name = "wmf-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "tracing"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
tracing = ["dep:tracing-wasm"]

[dependencies]
tracing-wasm = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
wmf-core = { workspace = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
