[package]
name = "wmf-wasm"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "tracing"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
tracing = ["dep:tracing-wasm", "wmf-core/tracing"]

[dependencies]
tracing-wasm = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
wmf-core = { workspace = true, features = ["svg"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
# Hand `wasm-opt -Oz` over the post-`wasm-bindgen` artifact so the
# release `.wasm` is shrunk to size-optimal form. Default behavior of
# `wasm-pack` keeps this disabled; enabling it shaves a substantial
# fraction off the published bundle without dropping any features.
#
# `--enable-*` flags whitelist the WebAssembly proposals that modern
# `rustc` emits by default; even Binaryen 116 still rejects the
# corresponding instructions unless they are explicitly enabled, so
# listing them avoids having to disable the matching `rustc`
# `target-feature` flags (which would cost code size).
wasm-opt = [
  '-Oz',
  '--enable-bulk-memory',
  '--enable-sign-ext',
  '--enable-mutable-globals',
  '--enable-nontrapping-float-to-int',
  '--enable-reference-types',
]

[package.metadata.cargo-udeps.ignore]
development = ["wasm-bindgen-test"]
